# Ffmpeg-transform

./: 1.avi  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  transcode
include/freetype/config/: ftoption.h
include/glad/: glad.h
include/glm/: Makefile  cmake_install.cmake
lib/: libavdevice.so.60.3.100  libavformat.so.60.16.100  libavutil.so.58.29.100  libfreetype.la  libfreetype.so.6.17.4  libglfw.so.3.4  libswresample.so.4.12.100  libswscale.so.7.5.100
lib/pkgconfig/: freetype2.pc  glfw3.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
share/glm/: glmConfig-noconfig.cmake  glmConfig.cmake
src/: glad.c  transcode.cpp
